--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
