--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@microsoft/signalr": "^8.0.7",
+    "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
